--- a/Windows/TaskDueWindow.xaml
+++ b/Windows/TaskDueWindow.xaml
@@ -17,13 +17,13 @@
 
             <Label Content="Task Due!" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" Foreground="{StaticResource Text}" FontSize="10" Padding="0" IsHitTestVisible="False" HorizontalAlignment="Center"/>
 
-            <ScrollViewer x:Name="TaskStackScroller" Style="{StaticResource CustomScrollViewerStyle}" HorizontalScrollBarVisibility="Disabled" Focusable="False" PreviewMouseWheel="TaskStackScroller_PreviewMouseWheel" Height="100" Margin="0 20 -17 20">
+            <ScrollViewer x:Name="TaskStackScroller" Style="{StaticResource CustomScrollViewerStyle}" HorizontalScrollBarVisibility="Disabled" Focusable="False" PreviewMouseWheel="TaskStackScroller_PreviewMouseWheel" Height="150" Margin="0 20 -17 20">
                 <StackPanel x:Name="TaskStack"/>
             </ScrollViewer>
 
-            <StackPanel Orientation="Horizontal" DockPanel.Dock="Right" HorizontalAlignment="Center" VerticalAlignment="Bottom">
-
-                <Border x:Name="CancelButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="CancelButton_MouseDown" MouseMove="Border_MouseMove" Height="35" Cursor="Hand" Margin="0 0 10 0">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+           
+                <Border x:Name="CancelButton" Margin="0 0 10 0" CornerRadius="5" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="CancelButton_MouseDown" MouseMove="Border_MouseMove" Height="35" Cursor="Hand">
 
                     <Border.Background>
                         <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource Secondary}}"/>
@@ -41,23 +41,18 @@
 
                 </Border>
 
-                <Border x:Name="AddButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="AddButton_MouseDown" MouseMove="Border_MouseMove" Height="35" Cursor="Hand">
-
-                    <Border.Background>
-                        <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource DarkBlue}}"/>
-                    </Border.Background>
-
-                    <Border.ToolTip>
-                        <ToolTip>
-                            <ToolTip.Content>
-                                <userControl:ButtonToolTip T1="Add Task" B1="enter"/>
-                            </ToolTip.Content>
-                        </ToolTip>
-                    </Border.ToolTip>
-
-                    <Label Content="Add Task" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Padding="15 0" Grid.Column="1" IsHitTestVisible="False" VerticalAlignment="Center"/>
-
-                </Border>
+                <Grid Height="40">
+                    <Border x:Name="EyeButton" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" Cursor="Hand" Width="40" IsMouseDirectlyOverChanged="EyeButton_IsMouseDirectlyOverChanged" MouseDown="EyeButton_MouseDown">
+                        <Border.ToolTip>
+                            <ToolTip>
+                                <ToolTip.Content>
+                                    <userControl:ButtonToolTip T1="Toggle between mute states" B1="m"/>
+                                </ToolTip.Content>
+                            </ToolTip>
+                        </Border.ToolTip>
+                    </Border>
+                    <Image x:Name="EyeIcon" Source="{StaticResource NoneEyeIcon}" Opacity="0.25" IsHitTestVisible="False" RenderTransformOrigin="0.5, 0.5" Width="15" Height="15"/>
+                </Grid>
 
             </StackPanel>
 
