--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -93,6 +93,21 @@
                             </Grid>
                         </Grid>
                     </Grid>
+                    <Grid Height="40" Margin="0 5 0 0">
+                        <Border x:Name="NotifPopupButton" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" Cursor="Hand" Width="40" IsMouseDirectlyOverChanged="NotifPopupButton_IsMouseDirectlyOverChanged" MouseDown="NotifPopupButton_MouseDown">
+                            <Border.ToolTip>
+                                <ToolTip>
+                                    <ToolTip.Content>
+                                        <userControl:ButtonToolTip T1="Toggle window popup toggle on task due" B1="o"/>
+                                    </ToolTip.Content>
+                                </ToolTip>
+                            </Border.ToolTip>
+                        </Border>
+                        <Grid x:Name="NotifPopupGrid" IsHitTestVisible="False" RenderTransformOrigin="0.5, 0.5">
+                            <Image x:Name="NotifPopupIcon" Source="{StaticResource popupNotifIcon}" Width="15" Height="15" Opacity="0.25"/>
+                            <Line x:Name="NotifPopupLine" X2="12" Y2="12" Stroke="{StaticResource PastDue}" StrokeStartLineCap="Round" StrokeEndLineCap="Round" StrokeThickness="2" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="1 2 0 0" Opacity="0"/>
+                        </Grid>
+                    </Grid>
                 </StackPanel>
 
             </DockPanel>
