--- a/Pages/AddTaskPage.xaml
+++ b/Pages/AddTaskPage.xaml
@@ -51,7 +51,7 @@
                             </Grid>
 
                             <Grid Height="80" Margin="0 5 0 0">
-                                <TextBox x:Name="TaskDescTextbox" Style="{StaticResource RoundedTextBox}" GotKeyboardFocus="Textbox_GotKeyboardFocus" TextWrapping="Wrap" VerticalContentAlignment="Top" Padding="10,10,10,10"/>
+                                <TextBox x:Name="TaskDescTextbox" Style="{StaticResource RoundedTextBox}" GotKeyboardFocus="Textbox_GotKeybosardFocus" TextWrapping="Wrap" VerticalContentAlignment="Top" Padding="10,10,10,10" AcceptsReturn="True"/>
                                 <Border x:Name="DescBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0" CornerRadius="10"/>
                             </Grid>
 
