--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -28,7 +28,7 @@
 
             <tb:TaskbarIcon.ContextMenu>
                 <ContextMenu>
-                    <MenuItem Header="Open" Click="TrayIcon_TrayLeftMouseDown"/>
+                    <MenuItem Header="Show/Hide" Click="TrayIcon_TrayLeftMouseDown"/>
                     <MenuItem Header="Close" Click="TrayIcon_TrayRightMouseUp"/>
                 </ContextMenu>
             </tb:TaskbarIcon.ContextMenu>
