--- a/Pages/AddTaskPage.xaml
+++ b/Pages/AddTaskPage.xaml
@@ -109,11 +109,11 @@
 
                         <Grid Margin="0 15 0 0">
 
-                            <!--<Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition Width="20"/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>-->
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition Width="20"/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
 
                             <StackPanel>
 
@@ -136,6 +136,20 @@
 
                                     <Border x:Name="TagsBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0" CornerRadius="10"/>
 
+                                </Grid>
+
+                            </StackPanel>
+
+                            <StackPanel Grid.Column="2">
+
+                                <Grid>
+                                    <Label Content="Recurrance" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Padding="0" Margin="0 0 0 5"/>
+                                    <Line x:Name="L8" Stroke="{StaticResource Text}" X2="7" Margin="0 14 0 0" Visibility="Collapsed"/>
+                                </Grid>
+
+                                <Grid>
+                                    <TextBox x:Name="RecurranceTextBox" Style="{StaticResource RoundedTextBox}" GotKeyboardFocus="Textbox_GotKeyboardFocus" TextChanged="TextBox_TextChanged"/>
+                                    <Border x:Name="RecurranceBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0" Height="40" CornerRadius="10"/>
                                 </Grid>
 
                             </StackPanel>
