Deleting focuses on next task

--- a/Resources/Dictionaries/Icons.xaml
+++ b/Resources/Dictionaries/Icons.xaml
@@ -208,6 +208,15 @@
         </DrawingImage.Drawing>
     </DrawingImage>
 
+    <DrawingImage x:Key="wontDoIcon">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V800 H800 V0 H0 Z">
+                <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F0 M800,800z M0,0z M600.8,98.9L450.2,98.9 199.2,98.9C143.8,98.9,98.9,143.8,98.9,199.2L98.9,299.5 98.9,600.6C98.9,656.1,143.8,701,199.2,701L349.8,701 600.7,701C656.1,701,701,656.1,701,600.7L701,500.3 701,199.2C701.2,143.8,656.2,98.9,600.8,98.9z M349.8,600.8L199.3,600.8 199.3,299.7 199.3,199.2 450.2,199.2 600.8,199.2 600.8,500.3 600.8,600.6 349.8,600.8 349.8,600.8z" />
+                <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F0 M800,800z M0,0z M535.2,464.1L471,400 479.1,391.9 535.1,335.9C554.7,316.3 554.7,284.5 535.1,264.9 515.5,245.3 483.8,245.3 464.1,264.9L400,329 392,321 336,265C316.4,245.4 284.6,245.4 265,265 245.4,284.6 245.4,316.3 265,336L329.1,400.1 321,408.1 265,464.1C245.4,483.7 245.4,515.5 265,535.1 284.6,554.7 316.3,554.7 336,535.1L400.1,471 408.2,479.1 464.2,535.1C483.8,554.7 515.6,554.7 535.2,535.1 554.7,515.5 554.7,483.7 535.2,464.1z" />
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
     <!--https://www.svgrepo.com/svg/375114/save-->
 
     <DrawingImage x:Key="saveIcon">
