--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -59,6 +59,26 @@
                         </Border>
                         <Image x:Name="CompletedIcon" Source="{StaticResource completedIcon}" MaxWidth="18" MaxHeight="18" Opacity="0.25" IsHitTestVisible="False" RenderTransformOrigin="0.5, 0.5"/>
                     </Grid>
+                    <Grid Margin="0 5 0 0">
+                        <Border x:Name="WontDoButton" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" Width="40" Height="40" MouseDown="CategoryButton_MouseDown" IsMouseDirectlyOverChanged="CategoryButton_IsMouseDirectlyOverChanged" Cursor="Hand">
+                            <Border.ToolTip>
+                                <ToolTip>
+                                    <userControl:ButtonToolTip T1="Switch to Completed View" B1="c"/>
+                                </ToolTip>
+                            </Border.ToolTip>
+                        </Border>
+                        <Image x:Name="WontDoIcon" Source="{StaticResource wontDoIcon}" MaxWidth="18" MaxHeight="18" Opacity="0.25" IsHitTestVisible="False" RenderTransformOrigin="0.5, 0.5"/>
+                    </Grid>
+                    <Grid Margin="0 5 0 0">
+                        <Border x:Name="TrashButton" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" Width="40" Height="40" MouseDown="CategoryButton_MouseDown" IsMouseDirectlyOverChanged="CategoryButton_IsMouseDirectlyOverChanged" Cursor="Hand">
+                            <Border.ToolTip>
+                                <ToolTip>
+                                    <userControl:ButtonToolTip T1="Switch to Completed View" B1="c"/>
+                                </ToolTip>
+                            </Border.ToolTip>
+                        </Border>
+                        <Image x:Name="TrashIcon" Source="{StaticResource trashIcon}" MaxWidth="18" MaxHeight="12" Opacity="0.25" IsHitTestVisible="False" RenderTransformOrigin="0.5, 0.5"/>
+                    </Grid>
                 </StackPanel>
 
                 <StackPanel DockPanel.Dock="Bottom" VerticalAlignment="Bottom">
