--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -92,7 +92,7 @@
                                 </ToolTip>
                             </Border.ToolTip>
                         </Border>
-                        <Image x:Name="EyeIcon" Source="{StaticResource NoneEyeIcon}" Opacity="0.25" IsHitTestVisible="False" RenderTransformOrigin="0.5, 0.5" Width="15" Height="15"/>
+                        <Image x:Name="EyeIcon" Source="{StaticResource TempGarbleNoneEyeIcon}" Opacity="0.25" IsHitTestVisible="False" RenderTransformOrigin="0.5, 0.5" Width="15" Height="15"/>
                     </Grid>
                     <Grid Height="40" Margin="0 5 0 0">
                         <Border x:Name="NotifButton" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" Cursor="Hand" Width="40" IsMouseDirectlyOverChanged="NotifButton_IsMouseDirectlyOverChanged" MouseDown="NotifButton_MouseDown" MouseUp="NotifButton_MouseUp">
