--- a/Resources/Dictionaries/Icons.xaml
+++ b/Resources/Dictionaries/Icons.xaml
@@ -381,4 +381,32 @@
         </DrawingImage.Drawing>
     </DrawingImage>
 
+    <!--https://www.svgrepo.com/svg/310122/text-description-->
+
+    <DrawingImage x:Key="descriptionIcon">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V24 H24 V0 H0 Z">
+                <DrawingGroup Opacity="1">
+                    <DrawingGroup Opacity="1">
+                        <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F1 M24,24z M0,0z M2.75,17L15.25,17C15.6642136,17 16,17.3357864 16,17.75 16,18.1296958 15.7178461,18.443491 15.3517706,18.4931534L15.25,18.5 2.75,18.5C2.33578644,18.5 2,18.1642136 2,17.75 2,17.3703042 2.28215388,17.056509 2.64822944,17.0068466L2.75,17 15.25,17 2.75,17z M2.75,13L21.25,13C21.6642136,13 22,13.3357864 22,13.75 22,14.1296958 21.7178461,14.443491 21.3517706,14.4931534L21.25,14.5 2.75,14.5C2.33578644,14.5 2,14.1642136 2,13.75 2,13.3703042 2.28215388,13.056509 2.64822944,13.0068466L2.75,13 21.25,13 2.75,13z M2.75,9L21.25,9C21.6642136,9 22,9.33578644 22,9.75 22,10.1296958 21.7178461,10.443491 21.3517706,10.4931534L21.25,10.5 2.75,10.5C2.33578644,10.5 2,10.1642136 2,9.75 2,9.37030423 2.28215388,9.05650904 2.64822944,9.00684662L2.75,9 21.25,9 2.75,9z M2.75,5L21.25,5C21.6642136,5 22,5.33578644 22,5.75 22,6.12969577 21.7178461,6.44349096 21.3517706,6.49315338L21.25,6.5 2.75,6.5C2.33578644,6.5 2,6.16421356 2,5.75 2,5.37030423 2.28215388,5.05650904 2.64822944,5.00684662L2.75,5 21.25,5 2.75,5z" />
+                    </DrawingGroup>
+                </DrawingGroup>
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
+    <!--https://www.svgrepo.com/svg/471824/repeat-01-->
+
+    <DrawingImage x:Key="repeatIcon">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V24 H24 V0 H0 Z">
+                <GeometryDrawing Geometry="F1 M24,24z M0,0z M17,2L21,6 M21,6L17,10 M21,6L7.8,6C6.11984,6 5.27976,6 4.63803,6.32698 4.07354,6.6146 3.6146,7.07354 3.32698,7.63803 3,8.27976 3,9.11984 3,10.8L3,11 M3,18L16.2,18C17.8802,18 18.7202,18 19.362,17.673 19.9265,17.3854 20.3854,16.9265 20.673,16.362 21,15.7202 21,14.8802 21,13.2L21,13 M3,18L7,22 M3,18L7,14">
+                    <GeometryDrawing.Pen>
+                        <Pen Brush="{StaticResource Icons}" Thickness="2" StartLineCap="Round" EndLineCap="Round" LineJoin="Round" MiterLimit="1" />
+                    </GeometryDrawing.Pen>
+                </GeometryDrawing>
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
 </ResourceDictionary>
