--- a/UserControls/IndividualTask.xaml
+++ b/UserControls/IndividualTask.xaml
@@ -38,6 +38,9 @@
 
             <StackPanel Orientation="Horizontal" DockPanel.Dock="Right" Margin="0 0 13 0">
 
+                <Image Source="{StaticResource descriptionIcon}" Height="15" Margin="10 0 10 0" IsHitTestVisible="False" x:Name="DescriptionIcon" RenderTransformOrigin="0.5,0.5" Visibility="Collapsed"/>
+                <Image Source="{StaticResource repeatIcon}" Height="10" Margin="10 0 10 0" IsHitTestVisible="False" x:Name="RepeatIcon" RenderTransformOrigin="0.5,0.5" Visibility="Collapsed"/>
+
                 <Label x:Name="DueDateTimeLabel" Foreground="{StaticResource Text}" Opacity="1" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" FontSize="13" HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsHitTestVisible="False" Padding="13 0 0 0"/>
 
                 <StackPanel x:Name="Icons" Orientation="Horizontal" Width="0" HorizontalAlignment="Right" Background="Transparent" Margin="13 0 0 0">
