--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -29,7 +29,7 @@
 
         <Grid x:Name="CategoriesGrid" DockPanel.Dock="Left">
 
-            <Popup x:Name="RightClickMenuPopup" Placement="Left" PlacementTarget="{Binding ElementName=NotifButton}" HorizontalOffset="10" AllowsTransparency="True"/>
+            <Popup x:Name="MuteMenuPopup" Placement="Left" PlacementTarget="{Binding ElementName=NotifButton}" HorizontalOffset="10" AllowsTransparency="True"/>
 
             <Border Background="{StaticResource Secondary}" Opacity="0.25"/>
             <Line Y2="{Binding ActualHeight, ElementName=CategoriesGrid}" StrokeThickness="2" Stroke="{StaticResource Accent}" HorizontalAlignment="Right"/>
@@ -135,6 +135,8 @@
         </Grid>
 
         <Grid>
+
+            <Popup x:Name="QuickTimeChangeMenuPopup" AllowsTransparency="True"/>
 
             <Grid Margin="50 0 50 0">
 
