--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -254,6 +254,31 @@
                 </Border>
             </Grid>
 
+            <Grid HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="35">
+                <Border Background="#252525" BorderBrush="{StaticResource Accent}" BorderThickness="0 1 1 0" CornerRadius="0 5 0 0">
+                    <StackPanel Orientation="Horizontal" Margin="10 0" VerticalAlignment="Center" HorizontalAlignment="Right">
+                        <Border x:Name="PageUpButton" Padding="0 14.5" Background="Transparent" Opacity=".5" IsMouseDirectlyOverChanged="PageButton_IsMouseDirectlyOverChanged" MouseDown="PageButton_MouseDown">
+                            <Image Source="{StaticResource triangleButton}" IsHitTestVisible="False"/>
+                        </Border>
+                        <Border Background="{StaticResource Secondary}" CornerRadius="4" Margin="10 6.75">
+                            <TextBox x:Name="PageTextbox" Style="{StaticResource TransparentUnroundedTextBox}" FontSize="9" Text="0" IsTabStop="False" Margin="0 -0.75 0 0" Padding="6.25 0"/>
+                        </Border>
+                        <Border x:Name="PageDownButton" Padding="0 14.5" Background="Transparent" Opacity=".5" IsMouseDirectlyOverChanged="PageButton_IsMouseDirectlyOverChanged" MouseDown="PageButton_MouseDown">
+                            <Image Source="{StaticResource triangleButton}" RenderTransformOrigin="0.5,0.5" IsHitTestVisible="False">
+                                <Image.RenderTransform>
+                                    <TransformGroup>
+                                        <ScaleTransform/>
+                                        <SkewTransform/>
+                                        <RotateTransform Angle="180"/>
+                                        <TranslateTransform/>
+                                    </TransformGroup>
+                                </Image.RenderTransform>
+                            </Image>
+                        </Border>
+                    </StackPanel>
+                </Border>
+            </Grid>
+
         </Grid>
 
     </DockPanel>
